배포 및 적용 확인 완료

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vue-ts-iamport",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "type": "module",
   "description": "First npm publishing",
   "main": "index.js"
 }
