--- a/package.json
+++ b/package.json
@@ -1,7 +1,37 @@
 {
   "name": "vue-ts-iamport",
-  "version": "0.0.2",
-  "type": "module",
-  "description": "First npm publishing",
-  "main": "index.js"
+  "version": "0.1.8",
+  "description": "Using Iamport on Vue.js 2.x and Typescript",
+  "main": "src/main.js",
+  "types": "src/main.d.ts",
+  "scripts": {
+    "build": "tsc",
+    "test": "babel-node build/main.js && jest",
+    "before-publish": "npm run build && npm test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HASA-06/vue-ts-iamport.git"
+  },
+  "keywords": [
+    "Vue.js",
+    "Typescript",
+    "Iamport",
+    "vue-ts-iamport"
+  ],
+  "author": "LEESANHA",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/HASA-06/vue-ts-iamport/issues"
+  },
+  "homepage": "https://github.com/HASA-06/vue-ts-iamport#readme",
+  "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/node": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "jest": "^26.6.3",
+    "typescript": "^4.1.3",
+    "vue": "^2.6.12"
+  },
+  "dependencies": {}
 }
